compiler/src/test/resources/amyc/nameAnalyzer/failing/LocalScope.amy
object LocalScope
  fn foo(): Int = {
    val i: Int = i;
    i
  }
end LocalScope
